# aloha_ros2

./: .gitignore  CMakeLists.txt  snn_aloha
aloha_scripts/: check_streams.py  constants.py  find_camera.py  one_side_teleop.py  real_env.py  realsense_publisher.py  record_episodes.py  robot_utils.py  run_policy.py  sleep.py  sleep_modify.py  sleep_right.py  visualize_episodes.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/snn_aloha/lib/snn_aloha/: constants.py  one_side_teleop.py  real_env.py  realsense_publisher.py  record_episodes.py  replay_episodes.py  robot_utils.py  setup.py  sleep.py  visualize_episodes.py
install/snn_aloha/share/snn_aloha/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/snn_aloha/share/snn_aloha/aloha2/: Aloha cam wrist mount v13.stl  Gravity compensator clip, elbow mount.stl  Gravity compensator clip, wrist mount.stl  RSd405 2020 Overhead Cam Mount v3.stl  RSd405 2020 Worms-eye Cam Mount v3.stl  Shim_rotor_v1.STL  W-shim_rotor_v1.STL
install/snn_aloha/share/snn_aloha/cmake/: snn_alohaConfig-version.cmake  snn_alohaConfig.cmake
install/snn_aloha/share/snn_aloha/config/: master_modes_left.yaml  master_modes_right.yaml  puppet_modes_left.yaml  puppet_modes_right.yaml
install/snn_aloha/share/snn_aloha/environment/: ament_prefix_path.dsv  path.dsv
install/snn_aloha/share/snn_aloha/launch/: 4arms_teleop.launch.py
launch/: 4arms_teleop.launch.py
log/: latest_build
(+3 files in other folders)
